--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "target": "entrepreneur-studio",
     "public": "www",
     "ignore": [
       "firebase.json",
