--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "5.2.11",
     "@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
     "@angular/fire": "^6.0.2",
@@ -25,8 +26,14 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ng-select/ng-select": "^5.0.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "ionic-tags-input": "^0.1.2",
+    "ionic-tooltips": "^4.0.0-beta.0",
+    "ionic4-tooltips": "^2.0.0",
+    "ng2-tooltip-directive": "^2.9.22",
+    "ngx-chips": "^2.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
