--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.1.6",
     "@capacitor/core": "2.2.1",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/in-app-browser": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -31,9 +32,12 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "ionic-tags-input": "^0.1.2",
     "ionic-tooltips": "^4.0.0-beta.0",
+    "ionic4-auto-complete": "^2.9.2",
     "ionic4-tooltips": "^2.0.0",
+    "ng2-file-upload": "^1.4.0",
     "ng2-tooltip-directive": "^2.9.22",
     "ngx-chips": "^2.1.0",
+    "ngx-tags-input": "^2.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
