--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "@ng-select/ng-select": "^5.0.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "cookieconsent": "^3.1.1",
     "ionic-tags-input": "^0.1.2",
     "ionic-tooltips": "^4.0.0-beta.0",
     "ionic4-auto-complete": "^2.9.2",
     "ionic4-tooltips": "^2.0.0",
+    "moment": "^2.29.1",
     "ng2-file-upload": "^1.4.0",
     "ng2-tooltip-directive": "^2.9.22",
     "ngx-chips": "^2.1.0",
+    "ngx-cookieconsent": "^2.2.3",
     "ngx-tags-input": "^2.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
