changes profile page

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/animations": "5.2.11",
     "@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
-    "@angular/fire": "^6.0.2",
+    "@angular/fire": "^6.1.1",
     "@angular/forms": "~9.1.6",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
@@ -31,6 +31,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "cookieconsent": "^3.1.1",
+    "firebase": "^8.1.1",
     "ionic-tags-input": "^0.1.2",
     "ionic-tooltips": "^4.0.0-beta.0",
     "ionic4-auto-complete": "^2.9.2",
