--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,8 @@
               }
             ],
             "scripts": [
-            "node_modules/cookieconsent/build/cookieconsent.min.js"
+            "node_modules/cookieconsent/build/cookieconsent.min.js",
+            "src/assets/trello.js"
           ]
           },
           "configurations": {
@@ -107,7 +108,8 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "styles": ["node_modules/cookieconsent/build/cookieconsent.min.css"],
-            "scripts": ["node_modules/cookieconsent/build/cookieconsent.min.js"],
+            "scripts": ["node_modules/cookieconsent/build/cookieconsent.min.js",
+            "src/assets/trello.js"],
             "assets": [
               {
                 "glob": "favicon.ico",
