--- a/package.json
+++ b/package.json
@@ -44,14 +44,17 @@
     "ionic4-auto-complete": "^2.9.2",
     "ionic4-tooltips": "^2.0.0",
     "moment": "^2.29.1",
+    "ng2-animate-on-scroll": "^2.2.0",
     "ng2-file-upload": "^1.4.0",
     "ng2-tooltip-directive": "^2.9.22",
     "ngx-chips": "^2.1.0",
     "ngx-cookieconsent": "^2.2.3",
     "ngx-link-preview": "^1.1.6",
+    "ngx-scrollreveal": "^3.0.0",
     "ngx-sharebuttons": "^8.0.4",
     "ngx-tags-input": "^2.0.1",
     "rxjs": "~6.5.1",
+    "scrollreveal": "^4.0.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
