--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angularx-timeline": "0.0.7",
+    "animate.css": "^4.1.1",
     "cookieconsent": "^3.1.1",
     "firebase": "^8.1.1",
     "ionic-tags-input": "^0.1.2",
@@ -44,7 +45,7 @@
     "ionic4-auto-complete": "^2.9.2",
     "ionic4-tooltips": "^2.0.0",
     "moment": "^2.29.1",
-    "ng2-animate-on-scroll": "^2.2.0",
+    "ng2-animate-on-scroll": "^2.2.1",
     "ng2-file-upload": "^1.4.0",
     "ng2-tooltip-directive": "^2.9.22",
     "ngx-chips": "^2.1.0",
