--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ng-select/ng-select": "^5.0.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@types/googlemaps": "^3.43.3",
     "angularx-timeline": "0.0.7",
     "animate.css": "^4.1.1",
     "cookieconsent": "^3.1.1",
